Created the Structure of the App using the Bootstrap Grid System

--- a/src/app/patient/patient-details/patient-details.component.html
+++ b/src/app/patient/patient-details/patient-details.component.html
@@ -1,3 +1,17 @@
-<p>
-  patient-details works!
-</p>
+<div class="row">
+  <div class="col-sm-12">
+    <app-patient-info></app-patient-info>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12">
+    <app-medical-history></app-medical-history>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12">
+    <app-controls></app-controls>
+  </div>
+</div>
