--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -1,3 +1,6 @@
-<p>
-  patient works!
-</p>
+<div class="col-sm-3">
+  <app-patient-list></app-patient-list>
+</div>
+<div class="col-sm-9">
+  <app-patient-details></app-patient-details>
+</div>
