--- a/src/app/patient/patient-details/medical-history/medical-history.component.html
+++ b/src/app/patient/patient-details/medical-history/medical-history.component.html
@@ -1,11 +1,19 @@
 <h3>Medical History</h3>
-<div class="row text-center">
+<hr/>
+<div class="row text-center history-header">
   <div class="col-sm-2 offset-md-6">No Problem</div>
   <div class="col-sm-2">Medical Problem</div>
   <div class="col-sm-2">Surgery</div>
 </div>
-<div class="row">
+<div class="row history-container">
   <div class="col-sm-1">1</div>
+  <div class="col-sm-5">Name of Condition... bla, bla bla</div>
+  <div class="col-sm-2 text-center"><input type="checkbox" /></div>
+  <div class="col-sm-2 text-center"><input type="checkbox" /></div>
+  <div class="col-sm-2 text-center"><input type="checkbox" /></div>
+</div>
+<div class="row history-container">
+  <div class="col-sm-1">2</div>
   <div class="col-sm-5">Name of Condition... bla, bla bla</div>
   <div class="col-sm-2 text-center"><input type="checkbox" /></div>
   <div class="col-sm-2 text-center"><input type="checkbox" /></div>
