--- a/src/app/patient/patient-details/patient-info/patient-info.component.html
+++ b/src/app/patient/patient-details/patient-info/patient-info.component.html
@@ -1,17 +1,20 @@
 <h3>Patient Info</h3>
-<div class="row" *ngIf="_patient">
+<hr/>
+<div class="row">
   <div class="col-sm-5 field-names">
-    <div><strong>MRN</strong></div>
-    <div><strong>Name</strong></div>
-    <div><strong>DOB</strong></div>
-    <div><strong>Schedule Time</strong></div>
-    <div><strong>Gender</strong></div>
+    <div><strong>Field Name</strong></div>
+    <div>MRN</div>
+    <div>Name</div>
+    <div>DOB</div>
+    <div>Schedule Time</div>
+    <div>Gender</div>
   </div>
   <div class="col-sm-7 field-notes">
-    <div>{{ patient.mrn }}</div>
-    <div>{{ patient.name }}</div>
-    <div>{{ patient.dob }}</div>
-    <div>{{ patient.schedule }}</div>
-    <div>{{ patient.gender }}</div>
+    <div><strong>Note</strong></div>
+    <div>{{ _patient.mrn }}</div>
+    <div>{{ _patient.name }}</div>
+    <div>{{ _patient.dob }}</div>
+    <div>{{ _patient.schedule }}</div>
+    <div>{{ _patient.gender }}</div>
   </div>
 </div>
