--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -1,6 +1,6 @@
-<div class="col-sm-3">
+<div class="col-sm-3 patient-list">
   <app-patient-list></app-patient-list>
 </div>
-<div class="col-sm-9">
+<div class="col-sm-9 patient-details">
   <app-patient-details></app-patient-details>
 </div>
