--- a/src/app/patient/patient-list/patient-list.component.html
+++ b/src/app/patient/patient-list/patient-list.component.html
@@ -1,3 +1,3 @@
-<ul>
-  <li *ngFor="let pat of _patients">{{ pat.name }}</li>
+<ul class="patients">
+  <li *ngFor="let pat of _patients" class="patient" (click)="selectPatient(elem)" #elem>{{ pat.name }}</li>
 </ul>
