Listed Medical History for Selected Patients

--- a/src/app/patient/patient-details/medical-history/medical-history.component.css
+++ b/src/app/patient/patient-details/medical-history/medical-history.component.css
@@ -1,5 +1,5 @@
-.history-container {
-    border-bottom: 1px solid #333;
+.medical-condition {
+    border-bottom: 1px solid #ddd;
     margin: 0;
     padding: 0.5rem;
 }
