Listed Patient Info for Selected Patient
+ Updated Patient Info CSS
+ Added Input Field for Patient Name

--- a/src/app/patient/patient-details/patient-info/patient-info.component.css
+++ b/src/app/patient/patient-details/patient-info/patient-info.component.css
@@ -1,10 +1,3 @@
-.field-names {
-    padding-right: 0;
-}
-.field-notes {
-    padding-left: 0;
-    margin-bottom: 1rem;
-}
 .field-names > div,
 .field-notes > div {
     border: 1px solid #333;
@@ -12,9 +5,7 @@
     padding: 0.1rem 0.5rem;
     min-height: 1.8rem;
 }
-.field-names > div {
-    border-right: 0px;
-}
+
 .field-names > div:first-child,
 .field-notes > div:first-child {
     background: #fafafa;
@@ -22,4 +13,22 @@
 .field-names > div:last-child,
 .field-notes > div:last-child {
     border-bottom-width: 1px;
+}
+.field-notes input {
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+@media (min-width: 575px) {
+    .field-names {
+        padding-right: 0;
+    }
+    .field-notes {
+        padding-left: 0;
+        margin-bottom: 1rem;
+    }
+    .field-names > div {
+        border-right: 0px;
+    }
 }
