Added Router Outlet to Patient Component
+ fixed last patient id

--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -2,5 +2,5 @@
   <app-patient-list></app-patient-list>
 </div>
 <div class="col-sm-9 patient-details">
-  <app-patient-details></app-patient-details>
+  <router-outlet></router-outlet>
 </div>
