Added Gender Radio Buttons
+ Updated CSS

--- a/src/app/patient/patient-details/patient-info/patient-info.component.css
+++ b/src/app/patient/patient-details/patient-info/patient-info.component.css
@@ -1,3 +1,6 @@
+.mrn {
+    color: #999;
+}
 .field-names > div,
 .field-notes > div {
     border: 1px solid #333;
@@ -18,6 +21,10 @@
     width: 100%;
     height: 100%;
     border: 0;
+}
+.field-notes input[type="radio"] {
+    width: initial;
+    height: initial;
 }
 
 @media (min-width: 575px) {
