--- a/src/app/patient/patient-details/patient-info/patient-info.component.html
+++ b/src/app/patient/patient-details/patient-info/patient-info.component.html
@@ -11,9 +11,16 @@
   </div>
   <div class="col-sm-7 field-notes" *ngIf="_patient">
     <div><strong>Note</strong></div>
-    <div>{{ _patient.mrn }}</div>
+    <div class="mrn">{{ _patient.mrn }}</div>
     <div><input type="text" [value]="_patient.name"></div>
     <div><input [(ngModel)]="_patient.dob" ng2-datetime-picker date-only="true" /></div>
     <div><input [(ngModel)]="_patient.schedule" ng2-datetime-picker date-format="MM-DD-YYYY" /></div>
+    <div>
+      <div class="row">
+        <div class="col-sm-4"><input type="radio" name="gender" value="male" [checked]="_patient.gender === 'male'"> Male</div>
+        <div class="col-sm-4"><input type="radio" name="gender" value="female" [checked]="_patient.gender === 'female'"> Female</div>
+        <div class="col-sm-4"><input type="radio" name="gender" value="other" [checked]="_patient.gender === 'other'"> Other</div>
+      </div>
+    </div>
   </div>
 </div>
