--- a/src/app/patient/patient.component.css
+++ b/src/app/patient/patient.component.css
@@ -1,9 +1,7 @@
 .patient-list {
-    height: 100%;
     padding: 0;
-    background: #fafafa;
-    border-right: 1px solid #eee;
 }
 .patient-details {
-
+    background: #fff;
+    border-left: 1px solid #eee;
 }
