Fixed responsiveness and Simplified Code in PatientInfoComponent

--- a/src/app/patient/patient-details/patient-info/patient-info.component.html
+++ b/src/app/patient/patient-details/patient-info/patient-info.component.html
@@ -17,9 +17,9 @@
     <div><input [(ngModel)]="_patient.schedule" ng2-datetime-picker date-format="MM-DD-YYYY" /></div>
     <div>
       <div class="row">
-        <div class="col-sm-4"><input type="radio" name="gender" value="male" [checked]="_patient.gender === 'male'"> Male</div>
-        <div class="col-sm-4"><input type="radio" name="gender" value="female" [checked]="_patient.gender === 'female'"> Female</div>
-        <div class="col-sm-4"><input type="radio" name="gender" value="other" [checked]="_patient.gender === 'other'"> Other</div>
+        <div class="col-4"><input type="radio" name="gender" value="male" [checked]="_patient.gender === 'male'"> Male</div>
+        <div class="col-4"><input type="radio" name="gender" value="female" [checked]="_patient.gender === 'female'"> Female</div>
+        <div class="col-4"><input type="radio" name="gender" value="other" [checked]="_patient.gender === 'other'"> Other</div>
       </div>
     </div>
   </div>
